???? 0.9.8.4

    user visible changes, client:
    * Reading a user config file if such file exists. User config file named
        instl_config.yaml can be placed in the home folder,
        format is regular instl !define format.
        File name is in variable __USER_CONFIG_FILE_NAME__.
    * Better error message when public ky cannot be determined.

    programmer visible changes:
    * Fixed the regex to find wtar versions of files to handle spaces in file names.

2/11/2014 0.9.18.1

    * It's possible now to install sources from any folder regardless of OS. This mainly enables the uses
        of Common folder in the same level of Win and Mac.

    user visible changes, client:
    * Moved the curl files to $(LOCAL_REPO_BOOKKEEPING_DIR)/curl instead of $(LOCAL_REPO_SYNC_DIR)/curl
    * LOCAL_REPO_SOURCES_DIR varaible is no longer used, use $(LOCAL_REPO_SYNC_DIR) instead.
    * new internal variable: __USER_HOME_DIR__ will point to the local home folder of the user.

    user visible changes, admin:
    * Install sources starting with '/' are absolute.
    * Install sources starting with '$(' are explicitly relative to that prefix variable.
    * Other install source remain relative to $(SOURCE_PREFIX).

30/10/2014 0.9.17.1

    user visible changes, client:
    * Better messages when exception is raised in case a file/folder is specified as source
        but does not exist in repository.

    user visible changes, admin:
    * Fixed a "lacuna" where fiels or folders that were wtared could not be downloaded as
        a stand alone item, only their parent folder could be. Now they can.
    * If a file/folder is missing for the map look for .wtar files with the same name and download them instead.

    programmer visible changes:
    * New method: SVNItem.walk_items_with_filter.
    * New method: InstlInstanceSync_url.mark_wtar_items_for_source
    * InstallItem.get_var_list adds a variable named "iid_iid" which is the actual iid.